implement GAT and GoShifter enrichment testing

--- a/pipeline_gwasenrichment/pipeline.ini
+++ b/pipeline_gwasenrichment/pipeline.ini
@@ -40,6 +40,9 @@ database=/ifs/data/annotations/hg19_ensembl62/csvdb
 dir=?!
 
 [snpset]
+# location of bim files with SNP positions
+bims=?!
+
 # directory containing lists of each SNP set
 dir=?!
 
@@ -67,6 +70,13 @@ isochores=?1
 # number of samples to perform, the smallest possible p-values
 # is dictated by the number of samples performed
 samples=?!
+
+[goshifter]
+# directory of tabix index pairwise LD data files
+ld=?!
+
+# number of permutations to perform for shifting annotations
+perms=?!
 
 ################################################################
 #
