debug MEME-suite input generation - requires FASTA record names to be unique

--- a/pipeline_gwasenrichment/pipeline.ini
+++ b/pipeline_gwasenrichment/pipeline.ini
@@ -28,16 +28,30 @@ release=0.1
 # the genome to use (UCSC convention)
 genome=hg19
 
+# index FASTA genome file
+genome_fasta=?!
 ################################################################
 #
 # Location of annotation database
 #
 ################################################################
 [annotations]
-database=/ifs/data/annotations/hg19_ensembl62/csvdb
+database=/ifs/data/annotations/hg19_ensembl72/csvdb
 
 # directory with annotation information
-dir=?!
+dir=/ifs/data/annotations/hg19_ensembl72
+
+# file containing genome contig IDs and sizes as
+# tab-separated text file
+contigs=?!
+
+# regex for cell type to select from enriched annotations
+# e.g. ([L|l]ung) for all lung related cell types
+cell_regex=?!
+
+# regular expression to pull out enriched annotations
+# Perl format, e.g. (H3K4me[1-3]) for all H3K4 methly marks
+regex=?!
 
 [snpset]
 # location of bim files with SNP positions
@@ -52,6 +66,9 @@ haplotypes=?!
 [bed]
 # location/directory of bed files (gzipped) with individual annotations
 files=?!
+
+# size of intervals to keep for MEME motif enrichment
+interval=?!
 
 [gat]
 # workspace files to define appropriate background for enrichments
@@ -78,6 +95,9 @@ ld=?!
 # number of permutations to perform for shifting annotations
 perms=?!
 
+[meme]
+# database of motif PWMs
+db=?!
 ################################################################
 #
 # sphinxreport build options
