debug rpy2 outputing function rather than dataframe <- issue with calling pandas2ri.ri2py_dataframe(R["res.df"])?.  rpy2 was recognising "res.df" as a function

--- a/pipeline_gwasenrichment/pipeline.ini
+++ b/pipeline_gwasenrichment/pipeline.ini
@@ -24,6 +24,9 @@ version=0.1
 # The full version, including alpha/beta/rc tags.
 release=0.1
 
+# R scripts directory
+r_scripts=?!
+
 ########################################################
 # the genome to use (UCSC convention)
 genome=hg19
@@ -95,9 +98,15 @@ ld=?!
 # number of permutations to perform for shifting annotations
 perms=?!
 
-[meme]
+[motifs]
 # database of motif PWMs
 db=?!
+
+# file containing additional PWMs to add to motifbreakR analysis
+pwms=?!
+
+# name of script to run motifbreakR analysis
+script=?!
 ################################################################
 #
 # sphinxreport build options
