user set q-val and log2 fold enrichment thresholds.  Account for situations with no enriched annotation

--- a/pipeline_gwasenrichment/pipeline.ini
+++ b/pipeline_gwasenrichment/pipeline.ini
@@ -85,11 +85,17 @@ ungapped=?!
 segmental_dups=?!
 
 # file containing predicted isochores
-isochores=?1
+isochores=?!
 
 # number of samples to perform, the smallest possible p-values
 # is dictated by the number of samples performed
 samples=?!
+
+# q-value threshold for selecting enriched annotations
+qval_thresh=?!
+
+# log2 fold change threshold for selecting enriched annotations
+l2fold_thresh=?!
 
 [goshifter]
 # directory of tabix index pairwise LD data files
